public interface Sistema {
    public void MainFrame();


}
